import {BadgeType} from "./BadgeType";

export default interface Badge {

    type: BadgeType

    message: string | undefined;

}
