export default interface Rule {

    filter: string;

    action: string;

    data: unknown;

    result: string;

}
