import Field from "./Field";

export default interface SearchForm {

    fields: Field[];

}
