export default interface Validation {

    type: string;

    message: string;

    data: string;

}
