import Component from "./Component";

export default interface ViewPart {

    cssClasses: string | undefined

    components: Component[]

}
