@startuml
class Step {
id
name
type
previousStepId
}
class View
class ViewPart
class Component {
id
data: Map<String, Object>
slot
attributes: Map<String, Object>
}
interface ViewMetadata
class Form {
title
readOnly
subtitle
status
}
class Badge
class Section {
idcaption
readOnly
type: Card, Transparent
}
class FieldGroup {
id
caption
}
class FieldGroupLine
class Field {
id
type
stereotype
captionplaceholder
cssClasses
description
}
class Validation {
type: Min, Max, Pattern, NotEmpty
data
}
class Crud {
listId
title
subtitle
canEdit
}
class SearchForm
class Column
class Action {
idcaption
type: Primary, Secondary
validationRequired
confirmationRequired
}
class ConfirmationTexts {
title
message
action
}
class Result
class Rule {
filter
action: Show, Hide, Enable, Disable, Run
data
result: Continue, Stop
}
class Pair {
key
value
}
Step --> View
View --> ViewPart: left
View --> ViewPart: middle
View --> ViewPart: right
ViewPart o--> Component
Component --> ViewMetadata
Component o--> Rule
ViewMetadata <|-- Form
ViewMetadata <|-- Crud
ViewMetadata <|-- Result
Crud --> SearchForm
Crud o--> Column
Crud o--> Action
Form o--> Badge
Form o--> Section
Form o--> Action: actions
Form o--> Action: mainActions
Form o--> Validation
Section o-> FieldGroup
Section o-> Action
FieldGroup o--> FieldGroupLine
FieldGroupLine o--> Field
Field o--> Validation
Field o--> Pair: attributes
Action --> ConfirmationTexts
@enduml
